[package]
name = "hex-view"
version = "0.1.2"
description = "Easily format a &[u8] as hex."
readme = "README.md"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://crates.io/crates/hex-view"
repository = "https://github.com/paulkernfeld/hex-view"
